# ghost_actor

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.cargo-task/: clippy.ct.rs  default.ct.rs  fmt-check.ct.rs  publish.ct.rs  readme.ct.rs  test.ct.rs
.github/workflows/: cargo-task.yml
benches/: bench.rs
crates/ghost_actor/: Cargo.toml  README.md
crates/ghost_actor/examples/: bounce.rs  hello_world.rs  pattern_clone_channel_factory.rs  pattern_event_pub_sub.rs  pattern_inner_sender.rs  pattern_internal_sender.rs
crates/ghost_actor/examples/mud/: con.rs  entity.rs  error.rs  main.rs  room.rs  world.rs
crates/ghost_actor/src/: actor.rs  actor_builder.rs  actor_macro.rs  as_ghost_actor.rs  as_trait.rs  chan_macro.rs  error.rs  event_macro.rs  future.rs  ghost_chan.rs  lib.rs  macro.rs  test.rs  tests.rs  types.rs
crates/ghost_actor/src/ghost_chan/: macro.rs
crates/ghost_actor_doc_example/: Cargo.toml  README.md
crates/ghost_actor_doc_example/src/: lib.rs
crates/ghost_actor_doc_example/tests/: integration.rs
examples/: bounce.rs
repro/: Cargo.toml
src/: actor.rs  as_ghost_actor.rs  box_macros.rs  config.rs  driver.rs  error.rs  ghost_chan.rs  lib.rs  macro.rs  macros.rs  rpc_chan.rs  rpc_enum.rs  test.rs  tests.rs  types.rs
src/ghost_chan/: ghost_chan_macros.rs  macro.rs
src/rpc_chan/: rpc_chan_macros.rs
src/rpc_enum/: rpc_enum_macros.rs
tests/: integration.rs
