[package]
name = "ghost_actor"
version = "0.3.0-alpha.4"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "A simple, ergonomic, idiomatic, macro for generating the boilerplate to use rust futures tasks in a concurrent actor style."
keywords = ["asynchronous", "holo", "holochain", "actor"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ghost_actor"
repository = "https://github.com/holochain/ghost_actor"

[dependencies]
futures = "0.3.15"
mockall = { version = "0.10.2", optional = true }
observability = { version = "0.1.3", optional = true }
paste = "1.0.5"
thiserror = "1.0.26"
tracing = "0.1.26"
tracing-futures = "0.2.5"
must_future = "0.1.2"

[dev-dependencies]
tokio = { version = "1.8.2", features = ["full"] }

[features]
default = ["observability"]
unstable = []
test_utils = ["mockall"]
