[package]
name = "ghost_actor"
version = "0.3.0-alpha.5"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "A simple, ergonomic, idiomatic, macro for generating the boilerplate to use rust futures tasks in a concurrent actor style."
keywords = ["asynchronous", "holo", "holochain", "actor"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ghost_actor"
repository = "https://github.com/holochain/ghost_actor"

[dependencies]
futures = "0.3.27"
mockall = { version = "0.11.3", optional = true }
paste = "1.0.12"
thiserror = "1.0.39"
tracing = "0.1.37"
tracing-futures = "0.2.5"
must_future = "0.1.2"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

[features]
default = []
unstable = []
test_utils = ["mockall"]
