[package]
name = "ghost_actor_doc_example"
version = "0.0.1-dontpublish"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"
# don't fill out this Cargo.toml - ensures it can't accidentally be published

[dependencies]
ghost_actor = { path = "../ghost_actor", features = ["test_utils"] }
mockall = { version = "0.10.2", optional = true }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.8.2", features = ["full"] }
tracing-subscriber = "0.2"

[features]
default = ["test_utils"]
test_utils = ["mockall"]
